# surreal_axum

./: .env  Cargo.toml
api/: .surrealdb  Cargo.toml
api/conversations.db/: 000013.sst  000016.sst  000031.sst  000034.sst  IDENTITY  LOG  LOG.old.1699005937723520  LOG.old.1699005963430243  LOG.old.1699110974068159  LOG.old.1699115473028634  LOG.old.1699194163519708  MANIFEST-000018  MANIFEST-000036
api/db/migrations/definitions/: _initial.json
api/db/schemas/: post.surql  spacetime_geometry.surql  spacetime_geometry_to_video_edge.surql  tag.surql  tag_to_post_edge.surql  user.surql  video.surql
api/src/: auth.rs  db.rs  error.rs  lib.rs  main.rs
api/src/schema/: auth.surql  comment.surql  post.surql  spacetime_geometry.surql  spacetime_geometry_to_video_edge.surql  tag.surql  user.surql
api/src/services/: mod.rs
api/src/services/coordinate/: mod.rs
api/src/services/geometry/: get.rs  mod.rs  post.rs
api/src/services/open_ai/: function.rs  mod.rs
api/src/services/open_ai/chat/: request.rs  response.rs
api/src/services/s3/: mod.rs
api/src/services/user/: get.rs  mod.rs  post.rs
api/src/services/video/: mod.rs  video.rs  video_label.rs
conversations.db/: 000013.sst  000016.sst  000021.sst  IDENTITY  LOG  LOG.old.1699319593229572  LOG.old.1699320390629567  MANIFEST-000018  MANIFEST-000023
crates/models/: Cargo.toml
crates/models/src/: body.rs  color.rs  coordinate_system.rs  credentials.rs  geometry.rs  interval.rs  lib.rs  payload.rs  random.rs  record.rs  rich_text.rs  session_token.rs  spacetime_geometry.rs  style.rs  user.rs  video.rs  video_label.rs  video_post.rs
crates/open_ai_api/: Cargo.toml
crates/open_ai_api/src/: lib.rs
crates/open_ai_api/src/chat/: request.rs  response.rs
crates/open_ai_client/: Cargo.toml
crates/open_ai_client/src/: finish_reason.rs  role.rs
crates/rich_text/: Cargo.toml
crates/rich_text/src/: lib.rs
