[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
# internal
models = { path = "../crates/models"}

tokio = { version = "1.25", features = ["full"] }
axum ={version="0.6.20", features=["ws", "headers", "tokio"]}
surrealdb = "1.0.0"

tower-http = { version = "0.4.0", features = ["cors", "trace"] } # added
tower-cookies = "0.9"

dotenv = "0.15.0"
tracing = "0.1.40"
http = "0.2.9"
thiserror = "1.0.50"
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
strum = { version = "0.24.1", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11.18", features = ['json'] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
jsonwebtoken = "8"
tracing-subscriber = "0.3.17"

rand_chacha = "0.3.1"
rand_core = { version = "0.6", features = ["std"] }
rand = "0.8.5"
once_cell = "1.18.0"
geo-types = "0.7.11"

# Defining bin here to make multi stage docker build work
[[bin]]
name = "nostalgia_api"
path = "src/main.rs"
