[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
# internal
models = { path = "../crates/models"}
open_ai_client = { path = "../crates/open_ai_client"}

tokio = { version = "1.25", features = ["full"] }
axum ={version="0.6.20", features=["ws", "headers", "tokio", "macros"]}
surrealdb =  { version="1.0", features=["kv-mem"]}

tower-http = { version = "0.4.0", features = ["cors", "trace"] } # added
tower-cookies = "0.9"
secrecy = "0.8.0"
dotenv = "0.15.0"
tracing = "0.1.40"
http = "0.2.9"
thiserror = "1.0.50"
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
strum = { version = "0.25.0", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11.18", features = ['json'] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
jsonwebtoken = "8"
tracing-subscriber = {version="0.3.17", features=["env-filter"]}
pbkdf2 = { version = "0.12.2", features = ['simple'] }

rand_chacha = "0.3.1"
rand_core = { version = "0.6", features = ["std"] }
rand = "0.8.5"
once_cell = "1.18.0"
geo-types = {version="0.7.11", features=["serde"]}
surrealdb-migrations = "1.0.0"
include_dir = "0.7.3"
geojson = { version = "0.24.1", features = ["geo-types"]}
geo = { version = "0.26.0", features = ["serde"] }
aws-sdk-s3 = "1.5.0"
axum_typed_multipart = "0.11.0"
tempfile = "3.8.1"

# Defining bin here to make multi stage docker build work
[[bin]]
name = "api"
path = "src/main.rs"
