[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
rand_chacha = "0.3.1"
rand_core = { version = "0.6", features = ["std"] }
rand = "0.8.5"
