[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
rand_chacha = "0.3.1"
rand_core = { version = "0.6", features = ["std"] }
rand = "0.8.5"
uuid = { version = "1.1.2", features = ["serde"] }
geo = { version = "0.26.0", features = ["serde"] }
thiserror = "1.0.38"
chrono = { version = "0.4.24", features = ["serde"] }
strum = { version = "0.24.1", features = ["derive"] }
surrealdb =  { version="1.0", features=["kv-mem"]}
geojson = { version = "0.24.1", features = ["geo-types"]}

bevy ={ version = "0.12.0", default-features=false}