[package]
name = "open_ai_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25", features = ["full"] }
thiserror = "1.0.50"
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
strum = { version = "0.25.0", features = ["derive"] }
reqwest = { version = "0.11.18", features = ['json'] }
dotenv = "0.15.0"
secrecy = "0.8.0"
